Grid Issues
Apparently the grid layout was not working in windows edge browser, so who knows.  It was all kinds of messed up in chrome though, so I just commented it out.

--- a/styl2.css
+++ b/styl2.css
@@ -5,18 +5,9 @@ body{
   background-size: cover;
   background-repeat:  no-repeat;  
   display: flex;
+  font-size: 1em;
 }
 
-.resume{
-  background: grey;
-}
-
-.resume h1{
-  text-align: center;
-  color: red;
-  outline: black;
-  text-shadow: white 0px 1px 2px 2px;
-}
 
 h2{
   text-align: center;
@@ -79,6 +70,8 @@ section{
 .indexBody{
   margin-left: 10%;
   margin-right: 10%;
+  padding-right: 10%;
+  padding-left: 2%;
   margin-top: 1em;
   border-radius: 1px;
   border: 2px solid red;
@@ -90,6 +83,8 @@ section{
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 1em;
+  padding-right: 10%;
+  padding-left: 2%;
   border-radius: 1px;
   border: 2px solid red;
   height: auto;
@@ -97,12 +92,20 @@ section{
 }
 
 .resume{
-  display: grid;
+ /* display: grid;
   grid-template-columns: 1fr 3fr;
   grid-column-gap: 10px;
-  grid-row-gap: 15px;
+  grid-row-gap: 15px;*/
   align-items: center;
   justify-content: center;
+  background: grey;
+}
+
+.resume h1{
+  text-align: center;
+  color: red;
+  outline: black;
+  text-shadow: white 0px 1px 2px 2px;
 }
 
 .resume section{
@@ -112,27 +115,32 @@ section{
   width: auto;
   margin-bottom: 1em;
   margin-left: 15%;
-  margin-right: 20%
+  margin-right: 20%   
 }
 
 #resumeProfile{
-  padding-right: 50%
-  grid-row: 2/4;
-  grid-column: 2/3;
+  padding-right: 20%
+  /*grid-row: 2/4;
+  grid-column: 2/3;*/
 }
 
 #resumeSkills{
-  grid-row: 4/8;
-  grid-column: 2/3;
+  /*grid-row: 4/8;
+  grid-column: 2/3;*/
+}
+
+#resumeEducation{
+  /*grid-row: 4/8;
+  grid-column: 3/4;*/
 }
 
 #resumeExp{
   padding-right: 10%;
-  grid-row: 2/4;
-  grid-column: 3/4;
+  /*grid-row: 2/4;
+  grid-column: 3/4;*/
 }
 
-#resumeEducation{
-  grid-row: 4/8;
-  grid-column: 3/4;
+.bonus{
+  background-image: url(\images\food.jpg);
+  text-align: center;
 }
